Fix shortcuts for freeze and unfreeze